--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <center>
     <h1>sagasilver.com</h1>
-    <p>Site under maintanence</p>
+    <p>Site under maintenance</p>
     </center>
 </body>
 </html>
